add quickdial function

--- a/exten/extensions_features.conf
+++ b/exten/extensions_features.conf
@@ -2,11 +2,29 @@
 ; 機能コード系処理(先頭が*のもの)
 ;
 
+;クイックダイヤル*+0,1,2で始まる3桁数字
+
+exten => _*[0-2]XX,1,NoOp(クイックダイヤル)
+;外線発信権限がない内線には使わせない
+exten => _*[0-2]XX,n,Gosub(macro-chkrestrict,s,1(2))
+;クイックダイヤル用プレフィクス指定番号取得
+exten => _*[0-2]XX,n,Set(PFNN=${DB(ABS/quickdial/PFX)})
+exten => _*[0-2]XX,n,GotoIf($["${PFNN}"=""]?nogo)
+exten => _*[0-2]XX,n,Set(PFX=${DB(ABS/OGP${PFNN})})
+exten => _*[0-2]XX,n,GotoIf($["${PFX}"=""]?nogo)
+;短縮番号からダイヤル先取得
+exten => _*[0-2]XX,n,Set(TARGET=${DB(ABS/quickdial/${EXTEN:1})
+exten => _*[0-2]XX,n,GotoIf($["${TARGET}"=""]?nogo)
+exten => _*[0-2]XX,n,Goto(prefixout,${PFX}${TARGET},1)
+exten => _*[0-2]XX,n(nogo),Congestion
+
+
 ;先頭が*0ダイヤルは拠点間内線発信
-exten => _*0.,1,NoOp(拠点間内線発信)
-exten => _*0.,n,Gosub(macro-whoami,s,1)
-exten => _*0.,n,Gosub(macro-chkrestrict,s,1(1))
-exten => _*0.,n,Goto(intra-out,${EXTEN:2},1)
+;拠点間内線は拠点番号2桁+相手内線3桁以上のこと
+exten => _*0XXXX.,1,NoOp(拠点間内線発信)
+exten => _*0XXXX.,n,Gosub(macro-whoami,s,1)
+exten => _*0XXXX.,n,Gosub(macro-chkrestrict,s,1(1))
+exten => _*0XXXX.,n,Goto(intra-out,${EXTEN:2},1)
 
 ;ピックアップ
 exten => *88,1,NoOp(通常ピックアップ)
