change ringpattern settings

--- a/exten/ringpattern_defs.conf
+++ b/exten/ringpattern_defs.conf
@@ -4,7 +4,8 @@
 exten => s,1,NoOp(RGPT Check ${RGPT})
 exten => s,n,GotoIf($["${RGPT}"=""]?setdef)
 exten => s,n,Return
-exten => s,n(setdef),Set(RGPT=1)
+;デフォルトは設定なしに
+exten => s,n(setdef),Set(RGPT=0)
 exten => s,n,Return
 
 [macro-setringpattern]
@@ -13,25 +14,39 @@ exten => s,n,GotoIf($["${RGPT}"=""]?endm)
 exten => s,n,Goto(${RGPT},1)
 exten => s,n(endm),Return
 
+;ゼロなら設定しない
+exten => 0,1,NoOp(NoRingpattern)
+exten => 0,n,Return
+
 ;以下はパナソニック/GrandStreamで動作確認済
 ;着信音1
-exten => 1,1,Set(ALERT=http://127.0.0.1/Bellcore-dr1)
+exten => 1,1,NoOp(RING1)
+exten => 1,n,Set(ALERT=http://127.0.0.1/Bellcore-dr1)
+;exten => 1,n,Set(ALERT=info=ring1)
 exten => 1,n,Goto(sendal,1)
 ;着信音2
-exten => 2,1,Set(ALERT=http://127.0.0.1/Bellcore-dr2)
+exten => 2,1,NoOp(RING2)
+exten => 2,n,Set(ALERT=http://127.0.0.1/Bellcore-dr2)
+;exten => 2,n,Set(ALERT=info=ring2)
 exten => 2,n,Goto(sendal,1)
 ;着信音3
-exten => 3,1,Set(ALERT=http://127.0.0.1/Bellcore-dr3)
+exten => 3,1,NoOp(RING3)
+exten => 3,n,Set(ALERT=http://127.0.0.1/Bellcore-dr3)
+;exten => 3,n,Set(ALERT=info=ring3)
 exten => 3,n,Goto(sendal,1)
 ;着信音4
-exten => 4,1,Set(ALERT=http://127.0.0.1/Bellcore-dr4)
+exten => 4,1,NoOp(RING4)
+exten => 4,n,Set(ALERT=http://127.0.0.1/Bellcore-dr4)
+;exten => 4,n,Set(ALERT=info=ring4)
 exten => 4,n,Goto(sendal,1)
 ;着信音5
-exten => 5,1,Set(ALERT=http://127.0.0.1/Bellcore-dr5)
+exten => 5,1,NoOp(RING5)
+exten => 5,n,Set(ALERT=http://127.0.0.1/Bellcore-dr5)
+;exten => 5,n,Set(ALERT=info=ring5)
 exten => 5,n,Goto(sendal,1)
 ;RGPTがレンジ外の場合
-exten => i,1,Set(ALERT=http://127.0.0.1/Bellcore-dr1)
-exten => i,n,Goto(sendal,1)
+exten => i,1,NoOp(RING-OOR)
+exten => i,n,Return
 
 ;Alert送信
 exten => sendal,1,NoOp
