change rintone method

--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -44,10 +44,25 @@ exten => s,n(done),Return
 ;テクノロジにかかわらずピア名取得マクロ
 [macro-getpeername]
 exten => s,1,NoOp(内線ピア名取得)
+;ピアのオーバライド設定がある場合にはそれを使用する
+exten => s,n,GotoIf($["${PEEROVERRIDE}"!=""]?doc2)
 exten => s,n,Set(MPEER=${CHANNEL(peername)})
 exten => s,n,GotoIf($["${MPEER}"!=""]?doc)
 exten => s,n,Set(MPEER=${CHANNEL(endpoint)})
 exten => s,n(doc),Return
+exten => s,n(doc2),Set(MPEER=${PEEROVERRIDE})
+exten => s,n,Return
+
+;チャンネルタイプ取得マクロ
+[macro-getchantype]
+exten => s,1,NoOp(チャンネルタイプ取得)
+;ピアのオーバライド設定の場合
+exten => s,n,GotoIf($["${PEEROVERRIDE}"!=""]?fixt)
+exten => s,n,Set(CHANTYPE=${CHANNEL(channeltype)})
+exten => s,n,Return
+;オーバライドされている場合には内線TECHを使う
+exten => s,n(fixt),Set(CHANTYPE=${DB(ABS/EXTTECH)})
+exten => s,n,Return
 
 ;内線番号からピア名取得マクロ
 ;入力: EXT
@@ -139,6 +154,7 @@ exten => s,n(nogo),Congestion
 ;グループダイヤルマクロへのエントリ
 [macro-groupdial]
 exten => s,1,NoOp(グループ呼び出し GRP=${ARG1} FROM=${ARG2})
+exten => s,n,NoOp(${RGPT})
 ;方式取得
 exten => s,n,Set(MET=${DB(ABS/GRP/${ARG1}/MET)})
 exten => s,n,GotoIf($["${MET}"="RR"]?grr)
@@ -193,7 +209,7 @@ exten => s,n,Set(TMO=${DB(ABS/GRP/TMO)})
 exten => s,n(doagain),GotoIf($["${FROM}"=""]?notkeysys)
 exten => s,n,GotoIf($["${FROM}"="0"]?notkeysys)
 ;キーシステムでの着信ならマクロ実行
-exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})x${OPT}))
+exten => s,n,Dial(${TGT},${TMO},b(macro-setringpattern,${RGPT},1)U(macro-markme^${FROM})x${OPT}))
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -201,7 +217,7 @@ exten => s,n,GotoIf($["${DIALSTATUS}"="NOANSWER"]?waitloop)
 exten => s,n,GotoIf($["${DIALSTATUS}"="CHANUNAVAIL"]?waitloop)
 exten => s,n,Goto(dobusy)
 ;キーシステムではない着信ならキーマクロなし
-exten => s,n(notkeysys),Dial(${TGT},${TMO},x${OPT})
+exten => s,n(notkeysys),Dial(${TGT},${TMO},b(macro-setringpattern,${RGPT},1)x${OPT})
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -266,7 +282,7 @@ exten => s,n,GotoIf($["${FROM}"="0"]?dodial)
 exten => s,n,Set(KMACRO=U(macro-markme^${FROM}))
 exten => s,n(dodial),NoOp
 exten => s,n,Gosub(macro-getexttech,s,1)
-exten => s,n,Dial(${EXTTECH}/${PEER},${TMO},x${OPT}${KMACRO})
+exten => s,n,Dial(${EXTTECH}/${PEER},${TMO},b(macro-setringpattern,${RGPT},1)x${OPT}${KMACRO})
 exten => s,n,Set(RNUM=$[${RNUM}+1])
 exten => s,n(trynxt),Set(i=$[${i}+1])
 exten => s,n,EndWhile
@@ -327,7 +343,7 @@ exten => s,n,Set(KMACRO=U(macro-markme^${FROM}))
 exten => s,n(dodial),NoOp
 exten => s,n,Set(DB(ABS/GRP/${GRP}/LAST)=$[${i}+1])
 exten => s,n,Gosub(macro-getexttech,s,1)
-exten => s,n,Dial(${EXTTECH}/${PEER},${TMO},x${OPT}${KMACRO})
+exten => s,n,Dial(${EXTTECH}/${PEER},${TMO},b(macro-setringpattern,${RGPT},1)x${OPT}${KMACRO})
 exten => s,n,Set(RNUM=$[${RNUM}+1])
 exten => s,n(trynxt),Set(i=$[${i}+1])
 exten => s,n,EndWhile
@@ -376,26 +392,46 @@ exten => s,n,Return
 
 ;外部サービス連携(着信通知)
 [external-notify]
-exten => s,1,NoOp(何もしない)
-exten => s,n,Return
-
-;exten => s,1,NoOp(着信通知連携-QPM)
+exten => s,1,NoOp(着信通知連携)
 ;exten => s,n,NoOp(${ARG1})
 ;exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
 ;exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
 ;exten => s,n,Goto(do_qpmnc)
 ;exten => s,n(noname),Set(TMP_CIDNAME="")
 ;exten => s,n(do_qpmnc),System(sh -x /var/lib/asterisk/qpmnd/qpmnc.sh ${ARG1} ${TMP_CIDNAME})
-;exten => s,n,Return
+exten => s,n,Return
 
-;exten => s,1,NoOp(着信通知連携-slack)
-;exten => s,n,NoOp(${ARG1})
+;Slackサンプルが以下
 ;exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
 ;exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
 ;exten => s,n,Goto(do_slack)
 ;exten => s,n(noname),Set(TMP_CIDNAME=${ARG1})
 ;exten => s,n(do_slack),System(python3 /var/lib/asterisk/slack-notify.py ${ARG1} ${TMP_CIDNAME})
 ;exten => s,n,Return
+
+;キー外部連携(QPMN)
+;ARG1=キー番号
+;ARG2=ステート
+[extern-devctrl]
+exten => s,1,NoOp(キー外部連携)
+;exten => s,n,NoOp(${ARG1})
+;exten => s,n,NoOp(${ARG2})
+;exten => s,n,NoOp(${ARG3})
+;exten => s,n,NoOp(${_THISPOSITION})
+;exten => s,n,GotoIf($[${ARG2}="RINGING"]?incom)
+;exten => s,n,GotoIf($["${ARG3}"=""]?conta)
+;exten => s,n,Set(CID=${ARG3})
+;exten => s,n,Goto(doexec)
+;exten => s,n(conta),GotoIf($["${DESTNUM}"=""]?incom)
+;exten => s,n,Set(CID=${DESTNUM})
+;exten => s,n,Goto(doexec)
+;exten => s,n(incom),Set(CID=${DB(KEYTEL/KEYSYS1/INCID)})
+;exten => s,n,GotoIf($["${CID}"!="anonymous"]?doexec)
+;exten => s,n,Set(CID="非通知")
+;exten => s,n(doexec),NoOp
+;exten => s,n,DumpChan()
+;exten => s,n,System(sh -x /var/lib/asterisk/qpmnd/qpmk.sh ${ARG2} ${ARG1} ${CID})
+exten => s,n,Return
 
 ;Experimental
 ;メッセージングサポート
