spport door phope

--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -177,15 +177,29 @@ exten => fax,n,NoOp(${FAXOPT(error)})
 exten => fax,n,Hangup
 
 ;ドアホン着信用
+;着信先番号は任意の2桁(何でもOK)
 [from-door]
-;ドアホンからの着信内線番号は5000固定
-exten => 5000,1,NoOp(ドアホン着信)
+;ドアホンからの着信内線番号は2桁の任意番号
+exten => _X.,1,NoOp(ドアホン着信)
+;CID名オーバライド
+exten => _X.,n,Set(CID=${DB(ABS/DOOR/CID)})
+exten => _X.,n,Set(CIDN=${DB(ABS/DOOR/CIDN)})
+exten => _X.,n,Set(CALLERID(name)=${CIDN})
+exten => _X.,n,GotoIf($["${CID}"=""]?srgp)
+exten => _X.,n,Set(CALLERID(num)=${CID})
 ;着信音パターン選択
-exten => 5000,n,Set(RGPT=${DB(ABS/DOOR/RGPT)})
-exten => 5000,n,Gosub(macro-setringpattern,s,1)
+exten => _X.,n(srgp),Set(RGPT=${DB(ABS/DOOR/RGPT)})
+exten => _X.,n,Gosub(macro-setringpattern,s,1)
 ;着信先グループ番号取得
-exten => 5000,n,Set(DGRP=${DB(ABS/DOOR/RING)})
-;先頭のGがある場合には削る
-exten => 5000,n,GotoIf($["${DGRP:0:1}"!="G"]?gdial)
-exten => 5000,n,Set(DGRP=${DGRP:1})
-exten => 5000,n(gdial),Gosub(macro-groupdial,s,1(${DGRP}))
+exten => _X.,n,Set(DGRP=${DB(ABS/DOOR/RING)})
+;先頭のGがある場合にグループダイヤル
+exten => _X.,n,GotoIf($["${DGRP:0:1}"!="G"]?sdial)
+exten => _X.,n,Set(DGRP=${DGRP:1})
+exten => _X.,n(gdial),Gosub(macro-groupdial,s,1(${DGRP}))
+exten => _X.,n,Hangup
+;単独内線へ
+exten => _X.,n(sdial),Set(EXT=${DGRP})
+exten => _X.,n,Gosub(macro-getexttech,s,1)
+exten => _X.,n,Gosub(macro-ext2peer,s,1)
+exten => _X.,n,Dial(${EXTTECH}/${PEER},,b(macro-setringpattern,${RGPT},1))
+exten => _X.,n,Hangup
