add alternate number for intra call

--- a/exten/extensions_features.conf
+++ b/exten/extensions_features.conf
@@ -26,6 +26,13 @@ exten => _*0XXXX.,n,Gosub(macro-whoami,s,1)
 exten => _*0XXXX.,n,Gosub(macro-chkrestrict,s,1(1))
 exten => _*0XXXX.,n,Goto(intra-out,${EXTEN:2},1)
 
+;先頭が*9ダイヤルは拠点間内線発信(代替)
+;拠点間内線は拠点番号2桁+相手内線3桁以上のこと
+exten => _*9XXXX.,1,NoOp(拠点間内線発信)
+exten => _*9XXXX.,n,Gosub(macro-whoami,s,1)
+exten => _*9XXXX.,n,Gosub(macro-chkrestrict,s,1(1))
+exten => _*9XXXX.,n,Goto(intra-out,${EXTEN:2},1)
+
 ;ピックアップ
 exten => *88,1,NoOp(通常ピックアップ)
 exten => *88,n,Goto(dopickup,s,1)
