add park time config

--- a/exten/extensions_fixedpark.conf
+++ b/exten/extensions_fixedpark.conf
@@ -28,6 +28,7 @@ exten => _Park[1-8],n,GotoIf($["${BLINDTRANSFER}"!=""]?pnxt1)
 exten => _Park[1-8],n,Gosub(macro-extcheck,s,1)
 exten => _Park[1-8],n(pnxt1),Set(PARKINGLOT=park${EXTEN:4})
 exten => _Park[1-8],n,Set(TARGET=8${EXTEN:4}1)
+exten => _Park[1-8],n,Gosub(get-parktime,s,1)
 exten => _Park[1-8],n,NoOp(${TARGET})
 exten => _Park[1-8],n,NoOp(${DEVICE_STATE(park:${TARGET}@parkedcalls)})
 exten => _Park[1-8],n,GotoIf($["${DEVICE_STATE(park:${TARGET}@parkedcalls)}"="NOT_INUSE"]?dopark)
@@ -38,7 +39,7 @@ exten => _Park[1-8],n,Answer()
 ;転送時には相手に番号読み上げを出さない
 exten => _Park[1-8],n,GotoIf($["${BLINDTRANSFER}"!=""]?pnxt2)
 exten => _Park[1-8],n,SayNumber(${EXTEN:4})
-exten => _Park[1-8],n(pnxt2),Park(,s)
+exten => _Park[1-8],n(pnxt2),Park(,st(${CPBT}))
 exten => _Park[1-8],n,Hangup
 
 ;BLFを持たない電話機用の機能コードショートカット
@@ -49,6 +50,7 @@ exten => _*77[1-8],n,GotoIf($["${BLINDTRANSFER}"!=""]?pnxt1)
 exten => _*77[1-8],n,Gosub(macro-extcheck,s,1)
 exten => _*77[1-8],n(pnxt1),Set(PARKINGLOT=park${EXTEN:3})
 exten => _*77[1-8],n,Set(TARGET=8${EXTEN:3}1)
+exten => _*77[1-8],n,Gosub(get-parktime,s,1)
 exten => _*77[1-8],n,NoOp(${TARGET})
 exten => _*77[1-8],n,NoOp(${DEVICE_STATE(park:${TARGET}@parkedcalls)})
 exten => _*77[1-8],n,GotoIf($["${DEVICE_STATE(park:${TARGET}@parkedcalls)}"="NOT_INUSE"]?dopark)
@@ -58,5 +60,5 @@ exten => _*77[1-8],n(dopark),NoOp(パーキング実行)
 exten => _*77[1-8],n,Answer()
 exten => _*77[1-8],n,GotoIf($["${BLINDTRANSFER}"!=""]?pnxt2)
 exten => _*77[1-8],n,SayNumber(${EXTEN:3})
-exten => _*77[1-8],n(pnxt2),Park(,s${RMPKOPT})
+exten => _*77[1-8],n(pnxt2),Park(,s${RMPKOPT}t(${CPBT}))
 exten => _*77[1-8],n,Hangup
