--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -372,6 +372,14 @@ exten => s,n,Return()
 exten => s,1,DumpChan()
 exten => s,n,Return()
 
+;コールパーク時呼び戻し時間取得
+[get-parktime]
+exten => s,1,NoOp
+exten => s,n,Set(CPBT=${DB(ABS/CPBT)})
+exten => s,n,GotoIf($["${CPBT}"!=""]?ends)
+exten => s,n,Set(CPBT=60)
+exten => s,n(ends),Return
+
 ;休日判定マクロ
 [macro-CHKHOLIDAY]
 exten => s,1,NoOp(休日判定)
