--- a/exten/extensions_features.conf
+++ b/exten/extensions_features.conf
@@ -53,6 +53,7 @@ exten => _*829,1,Goto(tcread,s,1)
 
 ;時間外制御トグル切り替え
 exten => *8228,1,NoOp
+exten => *8228,n,Gosub(macro-chkrestrict,s,1(3))
 exten => *8228,n,Goto(tcat,s,1)
 
 ;時間外メッセージ/VM関連特番
