change reset tone

--- a/exten/extensions_vm.conf
+++ b/exten/extensions_vm.conf
@@ -38,11 +38,13 @@ exten => s,n,GotoIf($["${DEVICE_STATE(Custom:TCCOND)}"="NOT_INUSE"]?tcset)
 ;時間外動作を解除
 exten => s,n,Set(DB(ABS/TCC)=0)
 exten => s,n,Set(DEVICE_STATE(Custom:TCCOND)=NOT_INUSE)
-exten => s,n,Goto(setp)
+exten => s,n,Goto(resetp)
 ;時間外動作をセット
 exten => s,n(tcset),Set(DB(ABS/TCC)=${MODE})
 exten => s,n,Set(DEVICE_STATE(Custom:TCCOND)=INUSE)
 exten => s,n(setp),Morsecode(S)
+exten => s,n,Hangup
+exten => s,n(resetp),Morsecode(R)
 exten => s,n,Hangup
 exten => s,n(nogo),Congestion
 
