--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -4,9 +4,9 @@
 
 ;テストで適当な番号を振りたい場合にはここに書く
 ;includeすると他に負けるので、ここに書くこと
-exten => 8765,1,Gosub(macro-AquesTalkPi,s,1(明日の天気は晴れ)
-exten => 8765,n,MusicOnHold
-exten => 8765,n,Hangup
+;exten => 8765,1,Gosub(macro-AquesTalkPi,s,1(明日の天気は晴れ)
+;exten => 8765,n,MusicOnHold
+;exten => 8765,n,Hangup
 ;
 ;特殊ノード(Local Ring)
 exten => localring,1,NoOp(localring)
@@ -118,6 +118,11 @@ exten => did-in,n,Set(CCIDNUM=${CALLERID(num)})
 exten => did-in,n,Set(CCIDNAME=${CALLERID(name)})
 exten => did-in,n,Set(CALLERID(name)=DI:${CALLERID(name)})
 exten => did-in,n,Set(EXT=${DIT})
+;指定がある場合にはプレフィクス付加
+exten => did-in,n,GotoIf($["${DB(ABS/APF)}"!="1"]?pfskip)
+exten => did-in,n,Set(OPF=${DB(ABS/OGP1)})
+exten => did-in,n,Set(CALLERID(num)=${OPF}${CALLERID(num)}
+exten => did-in,n(pfskip),NoOp
 ;対象がグループか単独かをチェック
 ;頭がGの場合にはグループ着信
 exten => did-in,n,NoOp(${EXT:0:1})
@@ -138,12 +143,8 @@ exten => did-in,n,Set(RGPT=${DB(ABS/DID/RGPT)})
 exten => did-in,n,gosub(macro-rgptcheck,s,1)
 ;タイムアウト取得
 exten => did-in,n,Set(TMO=${DB(ABS/DIO/TMO)})
-;指定がある場合にはプレフィクス付加
-exten => did-in,n,GotoIf($["${DB(ABS/APF)}"!="1"]?pfskip)
-exten => did-in,n,Set(OPF=${DB(ABS/OGP1)})
-exten => did-in,n,Set(CALLERID(num)=${OPF}${CALLERID(num)})
 ;ダイヤル実行
-exten => did-in,n(pfskip),Gosub(macro-getexttech,s,1)
+exten => did-in,n,Gosub(macro-getexttech,s,1)
 exten => did-in,n,Dial(${EXTTECH}/${PEER},${TMO},${OPT}b(macro-setringpattern,${RGPT},1))
 exten => did-in,n,Hangup
 ;グループ着信の場合にはマクロ実行
