DI cidname display change

--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -194,6 +194,7 @@ exten => _X.,n,Set(DIT=${DB(ABS/DID/any)})
 exten => _X.,n,GotoIf($["${DIT}"=""]?tcheck)
 ;anyでのダイヤルイン先内線がある場合には内線のダイヤルイン着信処理へ
 exten => _X.,n,NoOp(ダイヤルイン着信 any:${DIT})
+exten => _X.,n,Set(DIANY=YES)
 exten => _X.,n,Goto(inhouse-did,did-in,1)
 ;注意:ダイヤルイン着信はキー処理を迂回する
 ;any指定がある場合にはキーシステムは使用されない
