--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -116,8 +116,9 @@ exten => did-in,1,NoOp(ダイヤルイン着信処理)
 exten => did-in,n,Gosub(macro-cidnamecheck,s,1)
 exten => did-in,n,Set(CCIDNUM=${CALLERID(num)})
 exten => did-in,n,Set(CCIDNAME=${CALLERID(name)})
+exten => did-in,n,GotoIf($["${DIANY}"="YES"]?skippf)
 exten => did-in,n,Set(CALLERID(name)=DI:${CALLERID(name)})
-exten => did-in,n,Set(EXT=${DIT})
+exten => did-in,n(skippf),Set(EXT=${DIT})
 ;指定がある場合にはプレフィクス付加
 exten => did-in,n,GotoIf($["${DB(ABS/APF)}"!="1"]?pfskip)
 exten => did-in,n,Set(OPF=${DB(ABS/OGP1)})
