key autohunt added

--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -519,7 +519,12 @@ exten => _kcall[1-9],1,NoOp(キー着信${EXTEN:5:1})
 exten => _kcall[1-9],n,Set(HERE=${EXTEN:5:1})
 ;指定がある場合にはプレフィクス付加
 exten => _kcall[1-9],n,GotoIf($["${DB(ABS/APF)}"!="1"]?skippf)
-exten => _kcall[1-9],n,Set(CALLERID(num)=*56${HERE}${CALLERID(num)})
+exten => _kcall[1-9],n,Set(OPF57=${DB(ABS/OPF57)})
+exten => _kcall[1-9],n,GotoIf($["${OPF57}"=""]?d56go)
+exten => _kcall[1-9],n,GotoIf($["${OPF57}"="0"]?d56go)
+exten => _kcall[1-9],n,Set(CALLERID(num)=*57${OPF57}${CALLERID(num)})
+exten => _kcall[1-9],n,Goto(skippf)
+exten => _kcall[1-9],n(d56go),Set(CALLERID(num)=*56${HERE}${CALLERID(num)})
 exten => _kcall[1-9],n(skippf),Set(RNG=${DB(KEYTEL/KEYSYS${HERE}/RING)})
 ;キー毎の着信音パターン設定
 exten => _kcall[1-9],n,Set(RGPT=${DB(KEYTEL/KEYSYS${HERE}/RGPT)})
