fix some db families

--- a/exten/extensions_customs.conf
+++ b/exten/extensions_customs.conf
@@ -1,7 +1,16 @@
 ;カスタムcontextはここへ書く
 
+;着信拒否した相手に対しての"いやがらせ"
+[torture-ignore]
+exten => s,1,NoOp(TORTURE)
+exten => s,n,Ringing
+exten => s,n,Wait(10)
+exten => s,n,Answer()
+exten => s,n,Echo()
+exten => s,n,Hangup
+
 ;サンプル：着信拒否
-[custom-blacklisted]
+[custom-blocklisted]
 exten => s,1,NoOp(着信拒否処理)
 exten => s,n,Ringing
 exten => s,n,Wait(5)
