--- a/exten/extensions_features.conf
+++ b/exten/extensions_features.conf
@@ -142,7 +142,7 @@ exten => _*61XXXXXXXX.,n,Gosub(macro-chkrestrict,s,1(3))
 exten => _*61XXXXXXXX.,n,Set(NUM=${EXTEN:3})
 exten => _*61XXXXXXXX.,n,Answer
 exten => _*61XXXXXXXX.,n,Wait(1)
-exten => _*61XXXXXXXX.,n,Set(DB(ABS/blacklist/${NUM})=1)
+exten => _*61XXXXXXXX.,n,Set(DB(ABS/blocklist/${NUM})=1)
 exten => _*61XXXXXXXX.,n,Playtones(!532/500,!0/200)
 exten => _*61XXXXXXXX.,n,Wait(1)
 exten => _*61XXXXXXXX.,n,Hangup
@@ -152,10 +152,10 @@ exten => _*62XXXXXXXX.,n,Gossub(macro-chkrestrict,s,1(3))
 exten => _*62XXXXXXXX.,n,Set(NUM=${EXTEN:3})
 exten => _*62XXXXXXXX.,n,Answer
 exten => _*62XXXXXXXX.,n,Wait(1)
-exten => _*62XXXXXXXX.,n,Set(VAL=${DB(ABS/blacklist/${NUM})})
+exten => _*62XXXXXXXX.,n,Set(VAL=${DB(ABS/blocklist/${NUM})})
 exten => _*62XXXXXXXX.,n,GotoIf($["${VAL}"!="1"]?nfound)
 exten => _*62XXXXXXXX.,n,Playtones(!532/500,!0/200)
-exten => _*62XXXXXXXX.,n,Set(DB_DELETE(ABS/blacklist/${NUM})=ignored)
+exten => _*62XXXXXXXX.,n,Set(DB_DELETE(ABS/blocklist/${NUM})=ignored)
 exten => _*62XXXXXXXX.,n,Wait(1)
 exten => _*62XXXXXXXX.,n,Hangup
 exten => _*62XXXXXXXX.,n(nfound),Playtones(!532/200,!0/200,!532/200,!0/200,!532/200)
