--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -118,8 +118,10 @@ exten => _X.,n,NoOp(${CALLERID(name)})
 exten => _X.,n,Set(INCIDN=${CALLERID(num)})
 exten => _X.,n,Set(INCID=${CALLERID(num)})
 ;着信番号ログ
+exten => _X.,n,GotoIf($["${DB(ABS/ILOG)}"!="YES"]?ilogs)
 exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : INCOMING CALL - ${CALLERID(num)}" >> /var/log/asterisk/call_incoming.log)
 exten => _X.,n,System(chmod g+w /var/log/asterisk/call_incoming.log)
+exten => _X.,n(ilogs),NoOp
 ;;
 ;外線着信を変数にセット
 exten => _X.,n,Set(THISPOSITION=INBOUND)
@@ -135,7 +137,7 @@ exten => _X.,n,NoOp(着信先番号: ${TARGET})
 exten => _X.,n,Set(DTN=)
 ;着信拒否番号チェック
 exten => _X.,n,NoOp(着信拒否番号チェック)
-exten => _X.,n,Set(RET=${DB(ABS/blacklist/${INCIDN})})
+exten => _X.,n,Set(RET=${DB(ABS/blocklist/${INCIDN})})
 exten => _X.,n,GotoIf($["${RET}"!="1"]?blcont)
 ;拒否ログチェックと記録
 exten => _X.,n,GotoIf($["${DB(ABS/BLC/LOG)}"!="1"]?blj1)
