--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -135,12 +135,16 @@ exten => _X.,n(gtarget),Set(TARGET=${EXTEN})
 exten => _X.,n,NoOp(着信先番号: ${TARGET})
 ;DTNを空に
 exten => _X.,n,Set(DTN=)
+;許可リスト着信チェック
+exten => _X.,n,GotoIf($["${DB(ABS/BLC/ALIST)}"!="1"]?blck1)
+exten => _X.,n,Set(TMPCIDN=${DB(cidname/${CALLERID(num)})})
+exten => _X.,n,GotoIf($["${TMPCIDN}"=""]?dobl)
 ;着信拒否番号チェック
-exten => _X.,n,NoOp(着信拒否番号チェック)
+exten => _X.,n(blck1),NoOp(着信拒否番号チェック)
 exten => _X.,n,Set(RET=${DB(ABS/blocklist/${INCIDN})})
 exten => _X.,n,GotoIf($["${RET}"!="1"]?blcont)
 ;拒否ログチェックと記録
-exten => _X.,n,GotoIf($["${DB(ABS/BLC/LOG)}"!="1"]?blj1)
+exten => _X.,n(dobl),GotoIf($["${DB(ABS/BLC/LOG)}"!="1"]?blj1)
 exten => _X.,n,Log(NOTICE,"CALL BLOCKED - ${CALLERID(num)}")
 exten => _X.,n,System(echo "${STRFTIME(${EPOCH},,%Y/%m/%d-%H:%M:%S)} : CALL BLOCKED - ${CALLERID(num)}" >> /var/log/asterisk/call_reject.log)
 exten => _X.,n,System(chmod g+w /var/log/asterisk/call_reject.log)
