change some file locations

--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -7,6 +7,7 @@ exten => s,n,Set(i=1)
 ;キー数を増やす場合は以下に注意
 exten => s,n,While($[${i}<17])
 exten => s,n,Set(DEVICE_STATE(Custom:KEYSYS${i})=NOT_INUSE)
+exten => s,n,Set(DEVICE_STATE(Custom:KEYDSP${i})=NOT_INUSE)
 exten => s,n,Set(i=$[${i}+1])
 exten => s,n,EndWhile
 
@@ -48,6 +49,7 @@ exten => s,n,Busy
 exten => s,n,Hangup
 ;DEVSTATEを鳴動中に
 exten => s,n(ring),Set(DEVICE_STATE(Custom:KEYSYS${KID})=RINGING)
+exten => s,n,Set(DEVICE_STATE(Custom:KEYDSP${KID})=RINGING)
 ;鳴動チャネルを保存
 exten => s,n,Set(DB(KEYTEL/KEYSYS${KID}/ID)=${CHANNEL})
 ;ハングアップ後処理ハンドラ挿入
@@ -91,6 +93,7 @@ exten => s,n,Congestion
 exten => s,n,Hangup
 
 exten => s,n(outok),Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
+exten => s,n,Set(DEVICE_STATE(Custom:KEYDSP${KID})=INUSE)
 exten => s,n,Gosub(macro-markme,s,1(${KID}))
 exten => s,n,Set(CHANNEL(hangup_handler_push)=ch-afthang,s,1(${KID}))
 ;経路をマーク
@@ -129,6 +132,7 @@ exten => s,n(nogo),Hangup
 [macro-devschange]
 exten => s,1,NoOp
 exten => s,n,Set(DEVICE_STATE(Custom:KEYSYS${ARG1})=${ARG2})
+exten => s,n,Set(DEVICE_STATE(Custom:KEYDSP${ARG1})=${ARG2})
 ;デバッグ用
 ;exten => s,n,DumpChan()
 exten => s,n,Return
@@ -157,6 +161,7 @@ exten => s,n,GotoIf($["${DEVICE_STATE(Custom:KEYSYS${KID})}"!="ONHOLD"]?backnu)
 exten => s,n,GotoIf($["${DB(KEYTEL/KEYSYS${KID}/ORIGIN)}"!="INCOMING"]?nochg)
 ;解放されたら未使用に
 exten => s,n(backnu),Set(DEVICE_STATE(Custom:KEYSYS${ARG1})=NOT_INUSE)
+exten => s,n,Set(DEVICE_STATE(Custom:KEYDSP${ARG1})=NOT_INUSE)
 ;解放された後にピア名を無しに
 ;PBX挙動時に誤ったピアがキーを確保するのを防止
 exten => s,n(nochg),Set(DB(KEYTEL/KEYSYS${ARG1}/PEER)=NONE)
@@ -194,16 +199,46 @@ exten => _hold1X,n,Dial(Local/r${EXTEN}@holdnode,,m)
 
 ;鳴動のみの仮想内線
 ;1-9スロット用
+;exten => _rholdX,1,NoOp
+;exten => _rholdX,n(holdlp),Ringing
+;exten => _rholdX,n,Wait(10)
+;exten => _rholdX,n,Goto(holdlp)
+
+;1-9スロット用(点滅処理)
 exten => _rholdX,1,NoOp
+exten => _rholdX,n,GotoIf($["${DB(ABS/KHBL/USE)}" != "1"]?holdlp)
+exten => _rholdX,n,Set(HLTIME=${DB(ABS/KHBL/TIME)})
+exten => _rholdX,n(holdlpb),Ringing
+exten => _rholdX,n,Wait(${HLTIME})
+exten => _rholdX,n,Set(DEVICE_STATE(Custom:KEYDSP${EXTEN:5})=ONHOLD)
+exten => _rholdX,n,Wait(${HLTIME})
+exten => _rholdX,n,Set(DEVICE_STATE(Custom:KEYDSP${EXTEN:5})=NOT_INUSE)
+exten => _rholdX,n,Goto(holdlpb)
+;点滅なし時
 exten => _rholdX,n(holdlp),Ringing
 exten => _rholdX,n,Wait(10)
 exten => _rholdX,n,Goto(holdlp)
+
 ;10-16スロット用
+;exten => _rhold1X,1,NoOp
+;exten => _rhold1X,n(holdlp),Ringing
+;exten => _rhold1X,n,Wait(10)
+;exten => _rhold1X,n,Goto(holdlp)
+
+;10-16スロット用(点滅処理)
 exten => _rhold1X,1,NoOp
+exten => _rhold1X,n,GotoIf($["${DB(ABS/KHBL/USE)}" != "1"]?holdlp)
+exten => _rhold1X,n,Set(HLTIME=${DB(ABS/KHBL/TIME)})
+exten => _rhold1X,n(holdlpb),Ringing
+exten => _rhold1X,n,Wait(${HLTIME})
+exten => _rhold1X,n,Set(DEVICE_STATE(Custom:KEYDSP${EXTEN:5})=ONHOLD)
+exten => _rhold1X,n,Wait(${HLTIME})
+exten => _rhold1X,n,Set(DEVICE_STATE(Custom:KEYDSP${EXTEN:5})=NOT_INUSE)
+exten => _rhold1X,n,Goto(holdlpb)
+;点滅なし時
 exten => _rhold1X,n(holdlp),Ringing
 exten => _rhold1X,n,Wait(10)
 exten => _rhold1X,n,Goto(holdlp)
-
 
 
 ;######## 特殊ノードここまで ########
@@ -253,6 +288,7 @@ exten => keyhandle-INUSE,n,ChannelRedirect(${DB(KEYTEL/KEYSYS${KID}/ID)},holdnod
 exten => keyhandle-INUSE,n,GotoIf($["${CHANNELREDIRECT_STATUS}"!="SUCCESS"]?noredir)
 ;DEVSTATEを保留状態に変更
 exten => keyhandle-INUSE,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=ONHOLD)
+exten => keyhandle-INUSE,n,Set(DEVICE_STATE(Custom:KEYDSP${KID})=ONHOLD)
 ;再度ピアを自分のものに書き直し(この処理要る？？)
 exten => keyhandle-INUSE,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-INUSE,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER)})
@@ -296,6 +332,7 @@ exten => keyhandle-ONHOLD,1,NoOp
 exten => keyhandle-ONHOLD,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-ONHOLD,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER})
 exten => keyhandle-ONHOLD,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
+exten => keyhandle-ONHOLD,n,Set(DEVICE_STATE(Custom:KEYDSP${KID})=INUSE)
 ;ピックアップによりチャネルが成立するがロックは解除する
 exten => keyhandle-ONHOLD,n,Set(GLOBAL(TRLOCK)=0)
 ;保留中のキーをピックアップする
@@ -306,6 +343,7 @@ exten => keyhandle-ONHOLD,n,PickUpChan(Local/rhold${KID}@holdnode)
 exten => keyhandle-NOT_INUSE,1,NoOp
 ;該当キーを使用中に
 exten => keyhandle-NOT_INUSE,n,Set(DEVICE_STATE(Custom:KEYSYS${KID})=INUSE)
+exten => keyhandle-NOT_INUSE,n,Set(DEVICE_STATE(Custom:KEYDSP${KID})=INUSE)
 ;通話中のピアを自局にセット
 exten => keyhandle-NOT_INUSE,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-NOT_INUSE,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER})
@@ -323,6 +361,7 @@ exten => h,1,NoOp
 exten => h,n,GotoIf($["${STAT}"="WASDISA"]?cleanup,1)
 ;DISAで何も実行しなかった場合のクリーンナップ
 exten => cleanup,1,Set(DEVICE_STATE(Custom:KEYSYS${KID})=NOT_INUSE)
+exten => cleanup,n,Set(DEVICE_STATE(Custom:KEYDSP${KID})=NOT_INUSE)
 exten => cleanup,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=NONE)
 
 ;キーハンドラ終了時に排他解除するマクロ
@@ -358,22 +397,40 @@ exten => s,n,Return
 ;BOK Hint
 ;各BLF用のhint
 [bok-blfhints]
-exten => key1,hint,Custom:KEYSYS1
-exten => key2,hint,Custom:KEYSYS2
-exten => key3,hint,Custom:KEYSYS3
-exten => key4,hint,Custom:KEYSYS4
-exten => key5,hint,Custom:KEYSYS5
-exten => key6,hint,Custom:KEYSYS6
-exten => key7,hint,Custom:KEYSYS7
-exten => key8,hint,Custom:KEYSYS8
-exten => key9,hint,Custom:KEYSYS9
-exten => key10,hint,Custom:KEYSYS10
-exten => key11,hint,Custom:KEYSYS11
-exten => key12,hint,Custom:KEYSYS12
-exten => key13,hint,Custom:KEYSYS13
-exten => key14,hint,Custom:KEYSYS14
-exten => key15,hint,Custom:KEYSYS15
-exten => key16,hint,Custom:KEYSYS16
+;実体側
+exten => pkey1,hint,Custom:KEYSYS1
+exten => pkey2,hint,Custom:KEYSYS2
+exten => pkey3,hint,Custom:KEYSYS3
+exten => pkey4,hint,Custom:KEYSYS4
+exten => pkey5,hint,Custom:KEYSYS5
+exten => pkey6,hint,Custom:KEYSYS6
+exten => pkey7,hint,Custom:KEYSYS7
+exten => pkey8,hint,Custom:KEYSYS8
+exten => pkey9,hint,Custom:KEYSYS9
+exten => pkey10,hint,Custom:KEYSYS10
+exten => pkey11,hint,Custom:KEYSYS11
+exten => pkey12,hint,Custom:KEYSYS12
+exten => pkey13,hint,Custom:KEYSYS13
+exten => pkey14,hint,Custom:KEYSYS14
+exten => pkey15,hint,Custom:KEYSYS15
+exten => pkey16,hint,Custom:KEYSYS16
+;表示側(通常使用側)
+exten => key1,hint,Custom:KEYDSP1
+exten => key2,hint,Custom:KEYDSP2
+exten => key3,hint,Custom:KEYDSP3
+exten => key4,hint,Custom:KEYDSP4
+exten => key5,hint,Custom:KEYDSP5
+exten => key6,hint,Custom:KEYDSP6
+exten => key7,hint,Custom:KEYDSP7
+exten => key8,hint,Custom:KEYDSP8
+exten => key9,hint,Custom:KEYDSP9
+exten => key10,hint,Custom:KEYDSP10
+exten => key11,hint,Custom:KEYDSP11
+exten => key12,hint,Custom:KEYDSP12
+exten => key13,hint,Custom:KEYDSP13
+exten => key14,hint,Custom:KEYDSP14
+exten => key15,hint,Custom:KEYDSP15
+exten => key16,hint,Custom:KEYDSP16
 ;BLFに英文字指定できない電話機用の例
 exten => *561,hint,Custom:KEYSYS1
 exten => *562,hint,Custom:KEYSYS2
