--- a/exten/extensions_customs.conf
+++ b/exten/extensions_customs.conf
@@ -6,7 +6,10 @@ exten => s,1,NoOp(TORTURE)
 exten => s,n,Ringing
 exten => s,n,Wait(10)
 exten => s,n,Answer()
-exten => s,n,Echo()
+;exten => s,n,Echo()
+exten => s,n(tagain),Record(/var/spool/asterisk/recording/tmp1.ulaw,2,,q)
+exten => s,n,Playback(/var/spool/asterisk/recording/tmp1)
+exten => s,n,Goto(tagain)
 exten => s,n,Hangup
 
 ;サンプル：着信拒否
